<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3affff00"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/money_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/money"
            android:textColor="#025000"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Minus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/firstHalfAmount"
                android:textColor="#0000ff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="."
                android:textColor="#0000ff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/cents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="#0000ff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/cents2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="#0000ff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="options"
                    android:text="Show options for cents" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Minus2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/minus"
                    android:onClick="decrement2"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:text="These will allow you to enter in cents"
                    android:textColor="#0000ff"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/add2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="increment2"
                    android:text="@string/plus"
                    android:visibility="gone" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/addCategory1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCategory1"
                    android:text="@string/adding" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category"
                    android:inputType="textPersonName"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/addCategory2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCategory2"
                    android:text="@string/adding"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/removeCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="removeCategory1"
                    android:text="@string/remove"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category"
                    android:inputType="textPersonName"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/addCategory3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCategory3"
                    android:text="@string/adding"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/removeCategory2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="removeCategory2"
                    android:text="@string/remove"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category"
                    android:inputType="textPersonName"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/addCategory4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addCategory4"
                    android:text="@string/adding"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/removeCategory3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="removeCategory3"
                    android:text="@string/remove"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category"
                    android:inputType="textPersonName"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/removeCategory4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="removeCategory4"
                    android:text="@string/remove"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                android:text="@string/next" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>